ext {
    gwtVersion = '2.8.2'
    jettyVersion = '9.4.8.v20171121'
    springVersion = '5.0.2.RELEASE'
}

task wrapper(type: Wrapper) {
    gradleVersion = '4.4.1'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'maven'
    apply plugin: 'maven-publish'

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    def suffix = project.hasProperty('BUILD_RELEASE') ? "" : "-SNAPSHOT"
    version = '3.0.0' + suffix

    repositories {
        mavenCentral()
    }

    publishing {
        publications {
            maven(MavenPublication) {
                groupId 'com.ponysdk'
                artifactId project.name

                from components.java
            }
        }
    }
}
